# phda

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/: execute_prp_impl.md  execute_prp_impl_lean.md  execute_prp_tests.md  execute_prp_tests_lean.md  generate-prp.md  generate_prp_lean.md  generate_prp_tdd.md
.dev/: 1_setup_repo_db.md
ai_analytics_assistant/: main.py
ai_data_logger/: main.py
analytics_workflows/: main.py
data_workflows/: main.py
dev/: PLANNING.md
dev/PRPs/: phase_1_project_structure.md
dev/PRPs/templates/: prp_base.md  prp_base_lean.md  prp_base_tdd.md
dev/features/: phase_1_database_setup.md  phase_1_project_structure.md
docker/: compose.yaml
docker/dockerfiles/: .keep
docker/postgres/: init.sql
migrations/: env.py
migrations/versions/: 20380b70e496_create_initial_health_tables.py  6b31158ca1b9_add_optional_temperature_f_to_sauna_log.py
services/ai-analytics-assistant/: Dockerfile
services/ai-data-logger/: Dockerfile  health_log_tools.py
services/ai-data-logger/app/: __init__.py  agent.py  main.py
services/ai-data-logger/scripts/: test_agent.py  test_agent.sh
services/ai-data-logger/tools/: __init__.py
services/analytics-workflows/: Dockerfile
services/phoenix-monitor/: Dockerfile
shared/: __init__.py
shared/db/: models.py
shared/models/: __init__.py  health_logs.py
shared/monitoring/: phoenix.py
shared/utils/: config.py  database.py  dates.py
tests/: conftest.py
tests/fixtures/: database.py
tests/integration/: test_placeholder.py
ui/: main.py
